tests/instantiating/invalid/groups_property_invalid_type/bus.fbd
main bus
	foo config
		groups = "a"
